overflow resolved

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ html, body{
     background-repeat:no-repeat !important;
     background-size:cover !important;
     min-height: 100vh !important;
-    overflow: hidden;
-    /* display: flex; */
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .container{
-    /* max-height:100vh; */
+    max-width:100vw;
 }
 
 #dark-mode-btn{
